--- a/requirements.txt
+++ b/requirements.txt
@@ -12,26 +12,44 @@ entrypoints==0.3
 greenlet==1.1.0
 gunicorn==20.1.0
 idna==2.10
+imageio==2.9.0
+imutils==0.5.4
 MouseInfo==0.1.3
 nest-asyncio==1.5.1
+networkx==2.6.3
+numpy==1.20.3
+opencv-python==4.5.4.60
+opencv-python-headless==4.5.4.58
+pandas==1.2.4
 parso==0.8.2
 pickleshare==0.7.5
-Pillow==8.3.1
+Pillow==8.2.0
+plyer==2.0.0
 progressbar==2.5
 progressbar2==3.53.1
 prompt-toolkit==3.0.20
+PyAutoGUI==0.9.53
 PyGetWindow==0.0.9
 Pygments==2.10.0
+PyMsgBox==1.0.9
 pyparsing==2.4.7
 pyperclip==1.8.2
+pypiwin32==223
 PyRect==0.1.4
 PyScreeze==0.1.28
+pytesseract==0.3.8
+python-bidi==0.4.2
 python-dateutil==2.8.1
 python-utils==2.5.6
+pyttsx3==2.90
+pytweening==1.0.4
+pytz==2021.3
+PyWavelets==1.1.1
+pywin32==301
+PyYAML==6.0
 pyzmq==22.3.0
 SQLAlchemy==1.4.17
 sqlparse==0.4.2
 traitlets==5.1.0
-typing-extensions==3.10.0.2
-wcwidth==0.2.5
+urllib3==1.26.4
 whitenoise==5.3.0
