--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 backcall==0.2.0
+beautifulsoup4==4.9.3
 certifi==2020.12.5
 chardet==4.0.0
 colorama==0.4.4
@@ -8,12 +9,25 @@ cycler==0.10.0
 debugpy==1.5.0
 decorator==5.1.0
 Django==3.2.8
+easyocr==1.4.1
 entrypoints==0.3
+flutter==0.1
+graphscraper==0.5.0
 greenlet==1.1.0
 gunicorn==20.1.0
 idna==2.10
 imageio==2.9.0
 imutils==0.5.4
+ipykernel==6.4.1
+ipython==7.28.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+joblib==1.1.0
+jupyter-client==7.0.6
+jupyter-core==4.8.1
+kiwisolver==1.3.2
+matplotlib==3.4.3
+matplotlib-inline==0.1.3
 MouseInfo==0.1.3
 nest-asyncio==1.5.1
 networkx==2.6.3
@@ -48,8 +62,26 @@ PyWavelets==1.1.1
 pywin32==301
 PyYAML==6.0
 pyzmq==22.3.0
+requests==2.25.1
+scikit-image==0.18.3
+scikit-learn==1.0
+scipy==1.7.1
+seaborn==0.11.2
+selenium==3.141.0
+six==1.16.0
+sklearn==0.0
+soupsieve==2.2.1
+SpeechRecognition==3.8.1
 SQLAlchemy==1.4.17
 sqlparse==0.4.2
+threadpoolctl==3.0.0
+tifffile==2021.11.2
+torch==1.10.0+cu102
+torchaudio==0.10.0+cu102
+torchvision==0.11.1+cu102
+tornado==6.1
 traitlets==5.1.0
+typing-extensions==3.10.0.2
 urllib3==1.26.4
+wcwidth==0.2.5
 whitenoise==5.3.0
