--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pyttsx3==2.90
 pytweening==1.0.4
 pytz==2021.3
 PyWavelets==1.1.1
+pywin32==301
 PyYAML==6.0
 pyzmq==22.3.0
 requests==2.25.1
@@ -75,6 +76,9 @@ SQLAlchemy==1.4.17
 sqlparse==0.4.2
 threadpoolctl==3.0.0
 tifffile==2021.11.2
+torch==1.10.0+cu102
+torchaudio==0.10.0+cu102
+torchvision==0.11.1+cu102
 tornado==6.1
 traitlets==5.1.0
 typing-extensions==3.10.0.2
