--- a/requirements.txt
+++ b/requirements.txt
@@ -59,7 +59,7 @@ pyttsx3==2.90
 pytweening==1.0.4
 pytz==2021.3
 PyWavelets==1.1.1
-pywin32==301
+pywin32==301;platform_system == "Windows"
 PyYAML==6.0
 pyzmq==22.3.0
 requests==2.25.1
