--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,18 @@ ipython==7.28.0
 ipython-genutils==0.2.0
 jedi==0.18.0
 joblib==1.1.0
+jupyter-client==7.0.6
+jupyter-core==4.8.1
+kiwisolver==1.3.2
+matplotlib==3.4.3
+matplotlib-inline==0.1.3
 MouseInfo==0.1.3
 nest-asyncio==1.5.1
 networkx==2.6.3
+numpy==1.20.3
+opencv-python==4.5.4.60
+opencv-python-headless==4.5.4.58
+pandas==1.2.4
 parso==0.8.2
 pickleshare==0.7.5
 Pillow==8.2.0
@@ -39,6 +48,7 @@ Pygments==2.10.0
 PyMsgBox==1.0.9
 pyparsing==2.4.7
 pyperclip==1.8.2
+pypiwin32==223
 PyRect==0.1.4
 PyScreeze==0.1.28
 pytesseract==0.3.8
@@ -49,12 +59,26 @@ pyttsx3==2.90
 pytweening==1.0.4
 pytz==2021.3
 PyWavelets==1.1.1
+pywin32==301
 PyYAML==6.0
 pyzmq==22.3.0
+requests==2.25.1
+scikit-image==0.18.3
+scikit-learn==1.0
+scipy==1.7.1
+seaborn==0.11.2
+selenium==3.141.0
+six==1.16.0
+sklearn==0.0
+soupsieve==2.2.1
+SpeechRecognition==3.8.1
 SQLAlchemy==1.4.17
 sqlparse==0.4.2
 threadpoolctl==3.0.0
 tifffile==2021.11.2
+torch==1.10.0+cu102
+torchaudio==0.10.0+cu102
+torchvision==0.11.1+cu102
 tornado==6.1
 traitlets==5.1.0
 typing-extensions==3.10.0.2
