--- a/requirements.txt
+++ b/requirements.txt
@@ -48,7 +48,7 @@ Pygments==2.10.0
 PyMsgBox==1.0.9
 pyparsing==2.4.7
 pyperclip==1.8.2
-pypiwin32==223
+pywin32==223;platform_system == "Windows"
 PyRect==0.1.4
 PyScreeze==0.1.28
 pytesseract==0.3.8
@@ -76,9 +76,9 @@ SQLAlchemy==1.4.17
 sqlparse==0.4.2
 threadpoolctl==3.0.0
 tifffile==2021.11.2
-torch==1.10.0+cu102
-torchaudio==0.10.0+cu102
-torchvision==0.11.1+cu102
+torch==1.10.0+cu102;platform_system == "Windows"
+torchaudio==0.10.0+cu102;platform_system == "Windows"
+torchvision==0.11.1+cu102;platform_system == "Windows"
 tornado==6.1
 traitlets==5.1.0
 typing-extensions==3.10.0.2
